; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VALUE_STR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PackAddStr(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* null, i32** %9, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %18, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %12
  %16 = load i8*, i8** %7, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %15, %12, %3
  store i32* null, i32** %4, align 8
  br label %32

19:                                               ; preds = %15
  %20 = load i8*, i8** %7, align 8
  %21 = call i32* @NewStrValue(i8* %20)
  store i32* %21, i32** %8, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load i32, i32* @VALUE_STR, align 4
  %24 = call i32* @NewElement(i8* %22, i32 %23, i32 1, i32** %8)
  store i32* %24, i32** %9, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @AddElement(i32* %25, i32* %26)
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %19
  store i32* null, i32** %4, align 8
  br label %32

30:                                               ; preds = %19
  %31 = load i32*, i32** %9, align 8
  store i32* %31, i32** %4, align 8
  br label %32

32:                                               ; preds = %30, %29, %18
  %33 = load i32*, i32** %4, align 8
  ret i32* %33
}

declare dso_local i32* @NewStrValue(i8*) #1

declare dso_local i32* @NewElement(i8*, i32, i32, i32**) #1

declare dso_local i32 @AddElement(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
